Fixed some AA/AAA color contrast issues with new theme for TG

--- a/css/styling.css
+++ b/css/styling.css
@@ -739,12 +739,13 @@ header .topnav .icon {
 
 .accordion label:hover {
   background: var(--themeColorAccentL);
+  color: var(--themeColorD);
 }
 
 .accordion .content {
   background: var(--white);
   padding: 10px 25px;
-  outline: 1px solid var(--themeColor2);
+  outline: 1px solid var(--themeColorAccentD-a50);
   margin: 0 0 1rem 0;
   border-radius: 0 0 10px 10px;
 }
